update branches to run workflow on
Signed-off-by: Dave Sudia <15764229+thedevelopnik@users.noreply.github.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build Docker Images
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, 'thedevelopnik/**' ]
     paths:
       - 'web/**'
       - 'backend/**'
