--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64,darwin/arm64
+
       - name: Generate image metadata
         id: meta
         run: |
@@ -41,15 +49,63 @@ jobs:
           echo "tag=${TAG}" >> $GITHUB_OUTPUT
           echo "Generated tag: ${TAG}"
 
-      - name: Build backend image (test)
-        run: |
-          docker build -t workload-backend:${{ steps.meta.outputs.tag }} ./backend
-          echo "✅ Backend image built successfully"
+      - name: Build backend image (multi-arch)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          platforms: linux/amd64,linux/arm64,darwin/arm64
+          push: false
+          tags: workload-backend:${{ steps.meta.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Build web image (test)
+      - name: Build web image (multi-arch)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./web
+          platforms: linux/amd64,linux/arm64,darwin/arm64
+          push: false
+          tags: workload-web:${{ steps.meta.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build summary
         run: |
-          docker build -t workload-web:${{ steps.meta.outputs.tag }} ./web
-          echo "✅ Web image built successfully"
+          echo "✅ Backend image built successfully for linux/amd64, linux/arm64, darwin/arm64"
+          echo "✅ Web image built successfully for linux/amd64, linux/arm64, darwin/arm64"
+
+      # - name: Build single-arch images for testing
+      #   run: |
+      #     # Build linux/amd64 images for local testing and security scanning
+      #     docker buildx build --platform linux/amd64 --load -t workload-backend:${{ steps.meta.outputs.tag }}-amd64 ./backend
+      #     docker buildx build --platform linux/amd64 --load -t workload-web:${{ steps.meta.outputs.tag }}-amd64 ./web
+      #     echo "✅ Single-arch test images built"
+
+      # - name: Test container functionality
+      #   run: |
+      #     # Test backend container
+      #     docker run --rm -d --name test-backend -p 8080:8080 workload-backend:${{ steps.meta.outputs.tag }}-amd64
+      #     sleep 5
+      #     if docker ps | grep test-backend; then
+      #       echo "✅ Backend container is running"
+      #       docker stop test-backend
+      #     else
+      #       echo "❌ Backend container failed to start"
+      #       docker logs test-backend || true
+      #       exit 1
+      #     fi
+
+      #     # Test web container
+      #     docker run --rm -d --name test-web -p 8081:8080 workload-web:${{ steps.meta.outputs.tag }}-amd64
+      #     sleep 5
+      #     if docker ps | grep test-web; then
+      #       echo "✅ Web container is running"
+      #       docker stop test-web
+      #     else
+      #       echo "❌ Web container failed to start"
+      #       docker logs test-web || true
+      #       exit 1
+      #     fi
 
       # - name: Run security scan on images
       #   run: |
@@ -61,12 +117,12 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install trivy -y
           
-      #     # Scan images
+      #     # Scan images (using amd64 versions for scanning)
       #     echo "🔍 Scanning backend image..."
-      #     trivy image --exit-code 0 --severity HIGH,CRITICAL workload-backend:${{ steps.meta.outputs.tag }}
+      #     trivy image --exit-code 0 --severity HIGH,CRITICAL workload-backend:${{ steps.meta.outputs.tag }}-amd64
           
       #     echo "🔍 Scanning web image..."
-      #     trivy image --exit-code 0 --severity HIGH,CRITICAL workload-web:${{ steps.meta.outputs.tag }}
+      #     trivy image --exit-code 0 --severity HIGH,CRITICAL workload-web:${{ steps.meta.outputs.tag }}-amd64
 
       # - name: Comment PR with build results
       #   if: github.event_name == 'pull_request'
@@ -74,15 +130,16 @@ jobs:
       #   with:
       #     script: |
       #       const output = `
-      #       ## 🚀 Build Results
+      #       ## 🚀 Multi-Architecture Build Results
             
-      #       ✅ **Backend image**: Built successfully
-      #       ✅ **Web image**: Built successfully
-      #       ✅ **Container tests**: Passed
-      #       ✅ **Security scan**: Completed
+      #       ✅ **Backend image**: Built successfully for linux/amd64, linux/arm64, darwin/arm64
+      #       ✅ **Web image**: Built successfully for linux/amd64, linux/arm64, darwin/arm64
+      #       ✅ **Container tests**: Passed (linux/amd64)
+      #       ✅ **Security scan**: Completed (linux/amd64)
             
       #       **Image tag**: \`${{ steps.meta.outputs.tag }}\`
       #       **Commit**: \`${{ github.sha }}\`
+      #       **Platforms**: linux/amd64, linux/arm64, darwin/arm64
       #       `;
             
       #       github.rest.issues.createComment({
