--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./web
-          platforms: linux/amd64,linux/arm64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           push: false
           tags: workload-web:${{ steps.meta.outputs.tag }}
           cache-from: type=gha
@@ -71,8 +71,8 @@ jobs:
 
       - name: Build summary
         run: |
-          echo "✅ Backend image built successfully for linux/amd64, linux/arm64, darwin/arm64"
-          echo "✅ Web image built successfully for linux/amd64, linux/arm64, darwin/arm64"
+          echo "✅ Backend image built successfully for linux/amd64, linux/arm64"
+          echo "✅ Web image built successfully for linux/amd64, linux/arm64"
 
       # - name: Build single-arch images for testing
       #   run: |
