only run deploy for now for testing
Signed-off-by: Dave Sudia <15764229+thedevelopnik@users.noreply.github.com>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Build and Deploy Workload ID Demo
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'thedevelopnik/**' ]
     paths:
       - 'web/**'
       - 'backend/**'
