--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build Docker Images
 
 on:
   pull_request:
-    branches: [ main, 'thedevelopnik/**' ]
+    branches: [ main ]
     paths:
       - 'web/**'
       - 'backend/**'
