--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,7 +76,8 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION --profile w2w-demo-deployment | docker login --username AWS --password-stdin $ECR_REGISTRY
+            aws ecr get-login-password --region $AWS_REGION --profile w2w-demo-deployment
+          #  | docker login --username AWS --password-stdin $ECR_REGISTRY
 
       - name: Build and push backend image (multi-arch)
         id: build-backend
