--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,76 +22,76 @@ env:
 
 jobs:
   # Build and push Docker images
-  build:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    outputs:
-      backend-image: ${{ steps.build-backend.outputs.image }}
-      web-image: ${{ steps.build-web.outputs.image }}
-      image-tag: ${{ steps.meta.outputs.tag }}
+  # build:
+  #   name: Build Docker Images
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   outputs:
+  #     backend-image: ${{ steps.build-backend.outputs.image }}
+  #     web-image: ${{ steps.build-web.outputs.image }}
+  #     image-tag: ${{ steps.meta.outputs.tag }}
     
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #       with:
+  #         platforms: linux/amd64,linux/arm64
 
-      - name: Generate image metadata
-        id: meta
-        run: |
-          TAG=${GITHUB_SHA::8}
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            TAG="pr-${{ github.event.number }}-${TAG}"
-          fi
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
-          echo "Generated tag: ${TAG}"
+  #     - name: Generate image metadata
+  #       id: meta
+  #       run: |
+  #         TAG=${GITHUB_SHA::8}
+  #         if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+  #           TAG="pr-${{ github.event.number }}-${TAG}"
+  #         fi
+  #         echo "tag=${TAG}" >> $GITHUB_OUTPUT
+  #         echo "Generated tag: ${TAG}"
 
-      - name: Setup AWS helpers
-        run: |
-          wget https://rolesanywhere.amazonaws.com/releases/1.5.0/X86_64/Linux/aws_signing_helper
-          chmod +x aws_signing_helper
-          wget https://amazon-ecr-credential-helper-releases.s3.us-east-2.amazonaws.com/0.10.1/linux-amd64/docker-credential-ecr-login
-          mv docker-credential-ecr-login /usr/local/bin/
-          chmod +x /usr/local/bin/docker-credential-ecr-login
+  #     - name: Setup AWS helpers
+  #       run: |
+  #         wget https://rolesanywhere.amazonaws.com/releases/1.5.0/X86_64/Linux/aws_signing_helper
+  #         chmod +x aws_signing_helper
+  #         wget https://amazon-ecr-credential-helper-releases.s3.us-east-2.amazonaws.com/0.10.1/linux-amd64/docker-credential-ecr-login
+  #         mv docker-credential-ecr-login /usr/local/bin/
+  #         chmod +x /usr/local/bin/docker-credential-ecr-login
 
-      - name: Fetch Teleport binaries
-        uses: teleport-actions/setup@v1
-        with:
-          version: 17.5.2
+  #     - name: Fetch Teleport binaries
+  #       uses: teleport-actions/setup@v1
+  #       with:
+  #         version: 17.5.2
 
-      - name: Authenticate with Teleport
-        run: |
-          tbot start --oneshot -c ./action_support/bot.yaml
-          openssl x509 -text -in ./svid-out/svid.pem
+  #     - name: Authenticate with Teleport
+  #       run: |
+  #         tbot start --oneshot -c ./action_support/bot.yaml
+  #         openssl x509 -text -in ./svid-out/svid.pem
 
-      - name: Configure AWS credentials
-        run: |
-          mkdir -p /home/runner/.aws
-          cp ./action_support/aws_config /home/runner/.aws/config
-          cp ./action_support/docker_config.json /home/runner/.docker/config.json
+  #     - name: Configure AWS credentials
+  #       run: |
+  #         mkdir -p /home/runner/.aws
+  #         cp ./action_support/aws_config /home/runner/.aws/config
+  #         cp ./action_support/docker_config.json /home/runner/.docker/config.json
 
-      - name: Build and push backend image (multi-arch)
-        id: build-backend
-        run: |
-          IMAGE_URI="${ECR_REGISTRY}/${ECR_REPOSITORY}:backend-${{ steps.meta.outputs.tag }}"
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --push \
-            -t $IMAGE_URI \
-            --cache-from type=gha \
-            --cache-to type=gha,mode=max \
-            ./backend
-          echo "image=${IMAGE_URI}" >> $GITHUB_OUTPUT
-          echo "Built multi-arch backend image: ${IMAGE_URI}"
+  #     - name: Build and push backend image (multi-arch)
+  #       id: build-backend
+  #       run: |
+  #         IMAGE_URI="${ECR_REGISTRY}/${ECR_REPOSITORY}:backend-${{ steps.meta.outputs.tag }}"
+  #         docker buildx build \
+  #           --platform linux/amd64,linux/arm64 \
+  #           --push \
+  #           -t $IMAGE_URI \
+  #           --cache-from type=gha \
+  #           --cache-to type=gha,mode=max \
+  #           ./backend
+  #         echo "image=${IMAGE_URI}" >> $GITHUB_OUTPUT
+  #         echo "Built multi-arch backend image: ${IMAGE_URI}"
 
       # - name: Build and push web image (multi-arch)
       #   id: build-web
@@ -129,7 +129,7 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.32.2'
+          version: '1.32'
 
       - name: Fetch Teleport binaries
         uses: teleport-actions/setup@v1
