--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -111,7 +111,7 @@ jobs:
   deploy-k8s:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
     if: github.event_name != 'pull_request'
     permissions:
       id-token: write
