--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -112,7 +112,7 @@ jobs:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
     # needs: build
-    if: github.event_name != 'pull_request'
+    # if: github.event_name != 'pull_request'
     permissions:
       id-token: write
       contents: read
