kubectl setup needs v in version
Signed-off-by: Dave Sudia <15764229+thedevelopnik@users.noreply.github.com>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -129,7 +129,7 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.32'
+          version: 'v1.32.2'
 
       - name: Fetch Teleport binaries
         uses: teleport-actions/setup@v1
