--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -142,6 +142,7 @@ jobs:
 
       - name: Deploy tbot DaemonSet
         run: |
+          ls -la /home/runner/work/workload-id-demo/workload-id-demo/k8s-out/
           helm upgrade --install tbot ./charts/tbot \
             --namespace tbot \
             --values ./charts/tbot/values.yaml \
