remove if statement on ansible deploy for testing
Signed-off-by: Dave Sudia <15764229+thedevelopnik@users.noreply.github.com>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -170,7 +170,7 @@ jobs:
     name: Deploy with Ansible
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name != 'pull_request'
+    # if: github.event_name != 'pull_request'
     permissions:
       id-token: write
       contents: read
