--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -207,6 +207,7 @@ jobs:
         env:
           ANSIBLE_CONFIG: ./action_support/ansible.cfg
         run: |
+          cat /home/runner/work/workload-id-demo/workload-id-demo/ssh-out/ssh_config
           ansible-playbook -i ./ansible/hosts ./ansible/ghostunnel.yml
 
       # - name: Deploy web application
