--- a/charts/backend/templates/service.yaml
+++ b/charts/backend/templates/service.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: {{ .Values.app.namespace }}
   labels:
     {{- include "workload-app.labels" . | nindent 4 }}
+  annotations:
+    {{- if .Values.service.annotations }}
+    {{- toYaml .Values.service.annotations | nindent 4 }}
+    {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
