--- a/charts/backend/values-backend-1.yaml
+++ b/charts/backend/values-backend-1.yaml
@@ -6,12 +6,12 @@ app:
 
 image:
   repository: 668558765449.dkr.ecr.us-west-2.amazonaws.com/mwi-demo-10bbb2a
-  tag: "backend-pr-2-f113e8b8"
+  tag: "backend-pr-2-2b10a3c6"
   pullPolicy: Always
 
 env:
   BACKEND_SOCKET_PATH: "unix:///run/tbot/sockets/workload.sock"
-  BACKEND_APPROVED_CLIENT_SPIFFEID: "spiffe://mwidemo.cloud.gravitational.io/w2w-demo/web"
+  BACKEND_APPROVED_CLIENT_SPIFFEID: "spiffe://mwidemo.cloud.gravitational.io/apps/w2w-demo/web"
   BACKEND_NAME: "Backend 1"
   BACKEND_INFRA: "kubernetes"
   BACKEND_PORT: "3000"
@@ -20,6 +20,8 @@ service:
   type: LoadBalancer
   port: 443
   targetPort: 3000
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 
 serviceAccount:
   create: true
